--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,11 @@
 {
     "name": "micro-struct/source",
+    "license": "New BSD",
     "type": "package",
     "description": "Micro PHP Structure Source",
     "require": {
-        "php": ">=5.3.0"
+        "doctrine/orm": "dev-master",
+        "swiftmailer/swiftmailer": "v5.4.0"
     },
     "autoload": {
         "psr-4": {
